# OSNET01

./: README.md  pyproject.toml
facts.d/: ansible_factsi02-ceph1.maas  ansible_factsi02-ceph2.maas  ansible_factsi02-ceph3.maas  ansible_factsi02-ceph4.maas  ansible_factsi02-compute01.maas  ansible_factsi02-compute02.maas  ansible_factsi02-compute3.maas  ansible_factsi02-control.maas  ansible_factsi02-node01.maas  ansible_factsi02-node02.maas  ansible_factsi02-node03.maas  ansible_factsi02-node04.maas
hosts/test/: inventory
hosts/test/group_vars/: all.yml
playbooks/: provision.yml
roles/: requirements.yml
roles/frr/files/: frrouting.gpg
roles/frr/handlers/: main.yml
roles/frr/tasks/: main.yml
roles/frr/templates/: overlay.j2  underlay.j2
roles/mtu/tasks/: main.yml
roles/mtu/templates/: default.j2
roles/netplan/tasks/: main.yml
roles/netplan/templates/: overlay.j2  underlay.j2
roles/ovn-bgp-agent/tasks/: main.yml
roles/ovn-bgp-agent/templates/: conf.j2  service.j2
roles/sysctl/tasks/: main.yml
roles/user/tasks/: main.yml
